--- a/correct.html
+++ b/correct.html
@@ -6,7 +6,23 @@
 </head>
 <body>
     <h1>Correct Wachtwoord!</h1>
-    <p>De blacklight is gebruikbaar.</p>
-    <!-- You can customize the content and styling of this page as needed -->
+    <h3>Je kan het belichtingsysteem bedienen via dit scherm</h3>
+    <div class="schakelaars">
+        <div class="schakelaar">
+            <h2>Normaal Licht </h2>
+            <div>
+            <button  class="submit-button normalLight" >ON</button>
+            </div>
+        </div>
+        <div class="schakelaar">
+            <h2>Black Light</h2>
+            <div>
+            <button  class="submit-button blackLight">ON</button>
+            </div>
+            
+        </div>
+    </div>
+
+    <script src="control.js"></script>
 </body>
 </html>
